# koutoudai-yugata-naika-clinic

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
admin/: .env.development  .env.example  package-lock.json  package.json
backend/: .env.example  README.md  package-lock.json  package.json  wrangler.shift.toml  wrangler.timecard.toml  wrangler.toml
business-card/: index.html
clinic-notices/: medical-dx.html
finance/: estimate.html
frontend/: .env.development  astro.config.mjs  package-lock.json  package.json
google-ads/: .env.example  .gitignore  README.md  google-ads.yaml.example  pyproject.toml
google-ads/docs/claude-memory/: MEMORY.md  README.md  afterpill-google-ads-not-approvable.md  clinic-ad-schedule-ops.md  google-ads-api-v24-notes.md  memory-git-mirror.md  online-medical-page-gated-until-aug.md  summer-closure-2026-ads-paused.md
google-ads/scripts/: regen_refresh_token.py
google-ads/src/gads/: __init__.py  cli.py  client.py
google-ads/src/gads/commands/: ad.py  budget.py  campaign.py  conversion.py  keyword.py  report.py
instagram/: recruit.html
line/: rich-menu.html
manuals/: build.mjs  package.json
mixer/: DESIGN.md  index.html  package.json  vite.config.ts
notices/: clinic-info.html
shift/: DESIGN.md  README.md  index.html  package.json  vite.config.ts
shift-cli/: package.json  tsconfig.json
slides/: package.json  pnpm-lock.yaml  slides.md  style.css
staff/: 採用者リスト.html  採用者リスト.md
timecard/: DESIGN.md  WINDOWS_SETUP.md  index.html  package.json  (+2 more)
(+165 files in other folders)
