[project]
name = "gads"
version = "0.0.0"
description = "勾当台夕方内科クリニックの Google 広告運用CLI（レポート取得・予算/入札変更・キーワード管理）"
requires-python = ">=3.10"
dependencies = [
    "google-ads>=25.1.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
gads = "gads.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gads"]
